--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" href="https://pingendo.com/assets/bootstrap/bootstrap-4.0.0-alpha.6.css" type="text/css"> </head>
+  <link rel="stylesheet" href="https://pingendo.com/assets/bootstrap/bootstrap-4.0.0-alpha.6.css" type="text/css">
+  <title>九歌民族管弦樂團</title>
+</head>
 
 <body>
-  <div class="bg-primary text-center d-flex h-100 align-items-center">
+  <div class="text-center d-flex h-100 align-items-center bg-danger">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
@@ -28,10 +30,8 @@
             </div>
             <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev"> <span class="sr-only">Previous</span> </a>
             <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next"> <span class="sr-only">Next</span> </a>
-          </div><img class="center-block d-block mx-auto" src="http://www.chiuko.tw/chiuko_logo.png">
-          <h1 class="text-white display-3">九歌民族管弦樂團</h1>
-          <p class="lead text-white">Lorem ipsum dolor sit amet, consectetur adipisici elit.</p>
-        </div>
+          </div>
+          <h1 class="text-white display-4">九歌民族管弦樂團網站維護中</h1><img class="center-block d-block mx-auto py-5" src="chiuko_logo.png"> </div>
       </div>
     </div>
   </div>
