--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
   <div class="text-center d-flex h-100 align-items-center bg-danger">
     <div class="container">
       <div class="row">
+        <div class="col-md-12"><img class="center-block d-block mx-auto py-5" src="chiuko_logo.png"></div>
+      </div>
+      <div class="row">
         <div class="col-lg-12">
-          <h1 class="text-white display-4">九歌民族管弦樂團網站維護中</h1><img class="center-block d-block mx-auto py-5" src="chiuko_logo.png"> </div>
+          <h1 class="text-white display-4">九歌民族管弦樂團網站維護中</h1><a href="https://www.facebook.com/www.chiuko.tw/" class="btn btn-lg btn-primary my-5">前往九歌臉書粉絲團</a> </div>
       </div>
     </div>
   </div>
